# cmake-compiler-flags

./: CompilerFlags.cmake  README.md
.github/workflows/: test.yml
test/: CMakeLists.txt  char_signedness.cpp
